--- a/css/styles.css
+++ b/css/styles.css
@@ -11,53 +11,71 @@ body {
 
 .product-card {
     width: 350px;
-    padding: 2em;
     display: flex;
     flex-direction: column;
-    align-items: center;
+    align-items: flex-start;
     background-color: hsl(0, 0%, 100%);
-
+    border-radius: 1em;
+    margin-top: 2em;
 }
 
 .product-image {
-    width: 350px;
+    max-width: 100%;
+    border-radius: 1em 1em 0em 0em;
+}
+
+.product-text {
+    padding: 0.5em 2em 2em 2em;
 }
 
 .category {
-    font-size: 1.25em;
+    font-size: 1em;
     font-weight: 500;
     text-transform: uppercase;
     color: hsl(228, 12%, 48%);
+    letter-spacing: 0.4em;
 }
 
 .product-title {
     font-family: 'Fraunces', serif;
+    font-size: 2.25em;
+    line-height: 0.9;
 
 }
 
 .description {
+    color: hsl(228, 12%, 48%);
+    line-height: 1.5em;
+}
+
+.prices {
 
 }
 
 .current-price {
     color:hsl(158, 36%, 37%);
-    font-family: Fraunces, serif;
-    font-size: 3em;
-
+    font-family: 'Fraunces', serif;
+    font-size: 2.5em;
 }
 
 .full-price {
     color: hsl(228, 12%, 48%);
     text-decoration: line-through;
-
+    padding-left: 2em;
 }
 
 .add-to-cart-btn {
     color:hsl(0, 0%, 100%);
     background-color: hsl(158, 36%, 37%);
+    width: 100%;
+    padding: 1em;
+    border: none;
+    border-radius: 0.5em;
+    font-weight: 700;
 }
 
 .attribution {
+    padding-top: 3em;
     font-size: 11px; 
     text-align: center;
 }
