--- a/css/styles.css
+++ b/css/styles.css
@@ -15,67 +15,81 @@ body {
     flex-direction: column;
     align-items: flex-start;
     background-color: hsl(0, 0%, 100%);
-    border-radius: 1em;
-    margin-top: 2em;
+    border-radius: 1rem;
+    margin-top: 2rem;
 }
 
 .product-image {
     max-width: 100%;
-    border-radius: 1em 1em 0em 0em;
+    border-radius: 1rem 1rem 0rem 0rem;
 }
 
 .product-text {
-    padding: 0.5em 2em 2em 2em;
+    padding: 0.5rem 2rem 2rem 2rem;
 }
 
 .category {
-    font-size: 1em;
+    font-size: 0.8rem;
     font-weight: 500;
     text-transform: uppercase;
     color: hsl(228, 12%, 48%);
-    letter-spacing: 0.4em;
+    letter-spacing: 0.3rem;
 }
 
 .product-title {
     font-family: 'Fraunces', serif;
-    font-size: 2.25em;
+    font-size: 2rem;
     line-height: 0.9;
 
 }
 
 .description {
     color: hsl(228, 12%, 48%);
-    line-height: 1.5em;
+    line-height: 1.5rem;
 }
 
 .prices {
-
+    display: flex;
+    flex-direction: row;
+    align-items: center;
 }
 
 .current-price {
     color:hsl(158, 36%, 37%);
     font-family: 'Fraunces', serif;
-    font-size: 2.5em;
+    font-size: 2.5rem;
 }
 
 .full-price {
     color: hsl(228, 12%, 48%);
     text-decoration: line-through;
-    padding-left: 2em;
+    padding-left: 1.5rem;
 }
 
 .add-to-cart-btn {
     color:hsl(0, 0%, 100%);
     background-color: hsl(158, 36%, 37%);
     width: 100%;
-    padding: 1em;
+    padding: 1rem;
     border: none;
-    border-radius: 0.5em;
+    border-radius: 0.5rem;
     font-weight: 700;
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: center;
+}
+
+.add-to-cart-btn:active {
+    background-color: hsl(140, 53%, 16%);
+}
+
+.btn-icon {
+    margin-right:0.5rem;
 }
 
 .attribution {
-    padding-top: 3em;
+    padding-top: 3rem;
     font-size: 11px; 
     text-align: center;
 }
