--- a/css/styles.css
+++ b/css/styles.css
@@ -108,7 +108,7 @@ body {
 @media (min-width: 1440px) {
         
     .product-card {
-        width: 40%;
+        width: 700px;
         display: flex;
         flex-direction: row;
     }
@@ -119,10 +119,12 @@ body {
 
     .text-div {
         width: 50%;
+        height: 525px;
         display: flex;
         flex-direction: column;
-        justify-content: space-around;
+        justify-content: space-between;
         padding-top: 1.5rem;
+        box-sizing: border-box;
     }
 
     .description {
